--- a/user_cfg_64_tick.cfg
+++ b/user_cfg_64_tick.cfg
@@ -19,6 +19,9 @@ cl_showpos 1
 cl_showfps 1
 cl_radar_scale 0.3
 cl_radar_always_centered 0
+
+
+//Buybind
 bind "4" "buy hegrenade;use weapon_hegrenade"
 bind "y" "buy smokegrenade; use weapon_smokegrenade"
 bind "x" "buy molotov; buy incgrenade; use weapon_molotov; use weapon_incgrenade"
