--- a/user_cfg_128_tick.cfg
+++ b/user_cfg_128_tick.cfg
@@ -13,10 +13,9 @@ m_mouseaccel2 "0"
 cl_autowepswitch "0"
 cl_autohelp "0"
 cl_showhelp "0"
-cl_showfps "0"
+cl_showfps "1"
 net_graph "1"
 cl_showpos 1
-cl_showfps 1
 cl_radar_scale 0.3
 cl_radar_always_centered 0
 
@@ -44,6 +43,9 @@ bind "kp_multiply" "buy g3sg1; buy scar20"
 bind "-" "buy mag7"
 bind "rightarrow" "buy aug; buy sg556;"
 bind "leftarrow" " buy taser;"
+bind "uparrow" "buy nova;"
+
+
 bind "p" "noclip"
 bind "MOUSE5" "+voicerecord"
 alias +knife slot3
