--- a/user_cfg_128_tick.cfg
+++ b/user_cfg_128_tick.cfg
@@ -60,6 +60,8 @@ alias "aim6" "map workshop\647772108\tr_reflex_remake_v4-d2_hr"
 bind mwheeldown +jump
 con_filter_enable "1"
 con_filter_text_out "DispatchAsyncEvent backlog"
+bind "i" "messagemode"
+bind "u" "messagemode2"
 
 
 //TRAINING
